fix: misaligned rules close button

--- a/client/src/scss/utils/buttons.scss
+++ b/client/src/scss/utils/buttons.scss
@@ -155,7 +155,7 @@
 
 .rules-close-btn {
   position: absolute;
-  transform: translate(125px, 6px);
+  transform: translate(150px, 6px);
   width: 25px;
   height: 25px;
   z-index: 10;
